<resources>
    <string name="app_name">Private WiFi</string>
    <string name="on_screen_log_activity_label">Log</string>
    <string name="title_activity_app_selection">Select Apps</string>
    <string name="title_activity_groups">Networks</string>
    <string name="title_about">About</string>
    <string name="title_activity_group_add">Add Network</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
    <string name="test_prifi_button">Test Private WiFi</string>
    <string name="log_button">Show Log</string>
    <string name="relay_address_hint">Relay Address</string>
    <string name="relay_port_hint">Relay Port</string>
    <string name="relay_port_socks_hint">Relay Socks Port</string>
    <string name="disconnect_when_error_switch">Disconnect if the relay becomes not reachable</string>
    <string name="prifi_service_starting">Service starting</string>
    <string name="prifi_service_stopped">Service stopped</string>
    <string name="prifi_service_stopping_dialog_title">Stopping Service</string>
    <string name="prifi_service_stopping_dialog_message">Please wait</string>
    <string name="redirect_dialog_title">Open Telegram?</string>
    <string name="redirect_dialog_message">You will be redirected to Telegram</string>
    <string name="redirect_dialog_confirm">Go</string>
    <string name="redirect_dialog_cancel">Cancel</string>
    <string name="prifi_invalid_address">Invalid address</string>
    <string name="prifi_invalid_port">Invalid port</string>
    <string name="prifi_configuration_failed">Configuration failed</string>
    <string name="relay_status_none">Relay and Socks Server are both not available</string>
    <string name="relay_status_relay_only">Socks Server is not available</string>
    <string name="relay_status_socks_only">Relay is not available</string>
    <string name="check_network_dialog_title">Check Network Availability</string>
    <string name="check_network_dialog_message">Please wait</string>
    <string name="prifi_test_message_successful">Service can be used now, enjoy!</string>
    <string name="prifi_test_message_failed">Service is not available now</string>
    <string name="prifi_config_shared_preferences">PrifiConfigPreferences</string>
    <string name="prifi_config_first_init">PrifiConfigFirstInit</string>
    <string name="prifi_config_relay_address_default">PrifiConfigRelayAddressDefault</string>
    <string name="prifi_config_relay_port_default">PrifiRelayPortDefault</string>
    <string name="prifi_config_relay_socks_port_default">PrifiRelaySocksPortDefault</string>
    <string name="prifi_config_disconnect_when_error_default">DisconnectWhenNetworkErrorDefault</string>
    <string name="prifi_config_relay_address">PrifiConfigRelayAddress</string>
    <string name="prifi_config_relay_port">PrifiRelayPort</string>
    <string name="prifi_config_relay_socks_port">PrifiRelaySocksPort</string>
    <string name="prifi_config_disconnect_when_error">DisconnectWhenNetworkError</string>
    <string name="prifi_client_public_key">PrifiCLientPubKey</string>
    <string name="prifi_client_private_key">PrifiClientPriKey</string>
    <string name="prifi_relay_public_key">PrifiRelayPubKey</string>
    <string name="prifi_ui_sort_field">UISortField</string>
    <string name="prifi_ui_sort_descending">UISortDesc</string>
    <string name="prifi_ui_show_system_apps">UIShowSystemApps</string>
    <string name="prifi_service_notification_title">Private WiFi</string>
    <string name="prifi_service_notification_message">Service running</string>
    <string name="app_selection">Select apps</string>
    <string name="toggle_all">Toggle All</string>
    <string name="on_all">Activate all</string>
    <string name="off_all">Deactivate all</string>
    <string name="app_icon_content_description">App icon</string>
    <string name="AppSelectionUnavailable">Only available on Lollipop (API 21) or higher.</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_started">Private WiFi</string>
    <string name="msg_packages">%1$d prified apps</string>
    <string name="msg_hosts">%1$d allowed, %2$d blocked, %3$d hosts</string>
    <string name="msg_waiting">Waiting for event</string>
    <string name="msg_disabled">Private WiFi is disabled, use the switch above to enable Private WiFi</string>
    <string name="msg_revoked">Private WiFi has been disabled, likely by using another VPN based app</string>
    <string name="msg_installed">\'%1$s\' installed</string>
    <string name="msg_installed_n">Has been installed</string>
    <string name="msg_access">%1$s attempted internet access</string>
    <string name="msg_access_n">Attempted internet access</string>
    <string name="msg_completed">Action completed</string>
    <string name="msg_vpn">Private WiFi uses a local VPN to filter internet traffic. For this reason, please allow a VPN connection in the next dialog. Your internet traffic is not being sent to a remote VPN server.</string>
    <string name="msg_autostart">Private WiFi could not start automatically. This is likely because of a bug in your Android version.</string>
    <string name="msg_error">An unexpected error has occurred: \'%s\'</string>
    <string name="msg_start_failed">Android refused to start the VPN service at this moment. This is likely because of a bug in your Android version.</string>
    <string name="msg_try">Try Private WiFi</string>
    <string name="msg_dimming">If you cannot press OK in the next dialog, another (screen dimming) app is likely manipulating the screen.</string>
    <string name="msg_mbday">&#177; %1$.3f&#9650; %2$.3f&#9660; MB/day</string>
    <string name="msg_kbsec">%7.3f KB/s</string>
    <string name="msg_mbsec">%7.3f MB/s</string>
    <string name="msg_kb">%1$7.3f&#9650; %2$7.3f&#9660; KB</string>
    <string name="msg_mb">%1$7.3f&#9650; %2$7.3f&#9660; MB</string>
    <string name="msg_gb">%1$7.3f&#9650; %2$7.3f&#9660; GB</string>
    <string name="msg_count">%dx</string>
    <string name="msg_doze">For consistent results, the Android battery optimizations should be disabled for Private WiFi.\n\nIn the next dialog, select \"All apps\" at the top, tap on Private WiFi in the list and select and confirm \"Don\'t optimize\".</string>
    <string name="msg_datasaving">For consistent results, the Android data saving options should be disabled for Private WiFi\n\nIn the next dialog, enable the options \"Background data\" and \"Unrestricted data usage\"</string>
    <string name="msg_filter">Using filtering will cause Android to attribute data and power usage to Private WiFi - Android assumes the data and power are being used by Private WiFi, rather than the original apps</string>
    <string name="msg_filter4">Android 4 requires filtering to be enabled</string>
    <string name="msg_log_disabled">Traffic logging is disabled, use the switch above to enable logging. Traffic logging might result in extra battery usage.</string>
    <string name="msg_clear_rules">This will reset the rules and conditions to their default values</string>
    <string name="msg_reset_access">This will delete access attempt log lines without allow/block rules</string>
    <string name="msg_import_last">Last import: %s</string>
    <string name="msg_downloading">Downloading\n%1s</string>
    <string name="msg_downloaded">Hosts file downloaded</string>
    <string name="msg_download_last">Last download: %s</string>
    <string name="msg_start_forward" formatted="false">Start forwarding from %1$s port %2$d to %3$s:%4$d of \'%5$s\'?</string>
    <string name="msg_stop_forward">Stop forwarding of %1$s port %2$d?</string>
    <string name="msg_metered">Network is metered</string>
    <string name="msg_inactive">No active internet connection</string>
    <string name="msg_queue">Private WiFi is busy</string>
    <string name="msg_update">Update available, tap to download</string>
    <string name="msg_usage">You can allow (greenish) or deny (reddish) Wi-Fi or mobile internet access by tapping on the icons next to an app</string>
    <string name="msg_whitelist">Internet access is allowed by default (blacklist mode), this can be changed in the settings</string>
    <string name="msg_push">Incoming (push) messages are mostly handled by the system component Play services, which is allowed internet access by default</string>
    <string name="msg_system">Managing all (system) apps can be enabled in the settings</string>
    <string name="msg_issue">Please describe the problem and indicate the time of the problem:</string>
    <string name="msg_vpn_cancelled">VPN connection cancelled\nDid you configure another VPN to be an always-on VPN?</string>
    <string name="msg_on">Powering down your device with Private WiFi enabled, will automatically start on powering up your device</string>
    <string name="msg_unavailable">This feature is not available on this Android version</string>
    <string name="msg_always_on">Another VPN is set as Always-on VPN</string>
    <string name="title_rate">Rate</string>
    <string name="title_allow">Allow</string>
    <string name="title_block">Block</string>
    <string name="title_allow_wifi">Allow Wi-Fi</string>
    <string name="title_block_wifi">Block Wi-Fi</string>
    <string name="title_allow_other">Allow mobile</string>
    <string name="title_block_other">Block mobile</string>
    <string name="title_root">root</string>
    <string name="title_mediaserver">mediaserver</string>
    <string name="title_gpsdaemon" translatable="false">GPS daemon</string>
    <string name="title_nobody">nobody</string>
    <string name="title_dontask">Don\'t ask again</string>
    <string name="sort">Sort by</string>
    <string name="ui_show_system_apps">Show system apps</string>
    <string name="ui_search">Search</string>
    <string name="ui_menu_sort_app_name">App Name</string>
    <string name="ui_menu_sort_package_name">Package Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Private WiFi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_log">Logging</string>
    <string name="title_apps">Private Apps</string>
    <string name="desc_epfl_logo">epfl_logo</string>
    <string name="title_settings_activity">Settings</string>
    <string name="msg_stop_settings">Stop Private WiFi to change settings.</string>
    <string name="status_msg">Status: %1$s\nNetwork: %2$s</string>
    <string name="status_connnected">Connected</string>
    <string name="status_disconnnected">Disconnected</string>
    <string name="input_group_name_hint">Network name</string>
    <string name="title_menu_edit">Edit</string>
    <string name="title_menu_delete">Delete</string>
    <string name="title_menu_save">Save</string>
    <string name="required">Required</string>
    <string name="dialog_delete_group_title">Delete Network</string>
    <string name="dialog_delete_group_msg">Are you sure? This will also delete any related configurations.</string>
    <string name="dialog_delete_configuration_title">Delete Configuration</string>
    <string name="dialog_delete_configuration_msg">Are you sure?</string>
    <string name="dialog_delete_multiple_configuration_msg">Are you sure you want to delete %1$d configuration(s)?</string>
    <string name="input_configuration_name_hint">Name</string>
    <string name="input_configuration_host_hint">Host Address</string>
    <string name="input_configuration_socks_port_hint">Socks port</string>
    <string name="input_configuration_relay_port_hint_hint">Relay port</string>
</resources>