<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="epfl.prifi.myapplication.AppSelectionActivity">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="10"
        android:title="@string/ui_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:orderInCategory="20"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_app_name"
                android:title="@string/ui_menu_sort_app_name" />
            <item
                android:id="@+id/sort_package_name"
                android:title="@string/ui_menu_sort_package_name" />
        </menu>
    </item>

    <item
        android:id="@+id/on_all"
        android:orderInCategory="100"
        android:title="@string/on_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/off_all"
        android:icon="@drawable/ic_clear"
        android:orderInCategory="200"
        android:title="@string/off_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_system_apps"
        android:checkable="true"
        android:orderInCategory="900"
        android:title="@string/ui_show_system_apps"
        app:showAsAction="never" />
</menu>
