<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_apps_black_24dp"
            android:orderInCategory="1"
            android:title="@string/title_apps" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_manage"
            android:orderInCategory="2"
            android:title="@string/title_activity_groups" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:orderInCategory="3"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:orderInCategory="100"
            android:title="@string/title_about" />
    </group>
</menu>
