<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.epfl.prifiproxy.activities.ConfigurationAddEditActivity"
    tools:showIn="@layout/activity_configuration_add_edit">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_configuration_name_hint"
            tools:text="Relay 1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hostInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hostInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_configuration_host_hint"
            tools:text="192.168.0.13" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/relayPortInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/relayPortInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_configuration_relay_port_hint_hint"
            tools:text="7000" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/socksPortInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/socksPortInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_configuration_socks_port_hint"
            tools:text="8090" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
